# claw-plugin-init

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: publish.yml  test.yml
reference-projects/: README.md
reference-projects/create-astro/: package.json
reference-projects/create-openai-agent/: README.md  package.json
reference-projects/create-openai-agent/template/base/: Makefile  README.md  _dot_env.example  _dot_gitignore  mcp.json  pyproject.toml
reference-projects/create-openai-agent/template/base/_dot_github/: copilot-instructions.md
reference-projects/create-openai-agent/template/base/tools/: __init__.py  data.py  docs.py  files.py  web.py
references/: competitive-analysis.md  market-research.md  tech-architecture.md  user-research.md  xie-tao-summary.md
src/: index.ts  plugins.ts
src/commands/: init.ts
src/prompts/: name.ts  options.ts  type.ts
src/scaffold/: cleanup.ts  copy.ts  index.ts
src/utils/: logger.ts  package.ts  tty.ts  validation.ts
templates/channel-plugin/: README.md  openclaw.plugin.json  package.json
templates/channel-plugin/src/: index.ts
templates/mcp-server/: README.md  openclaw.plugin.json  package.json  tsconfig.json
templates/mcp-server/src/: index.ts
templates/provider-plugin/: README.md  openclaw.plugin.json  package.json
templates/provider-plugin/src/: index.ts
templates/tool-plugin/: README.md  openclaw.plugin.json  package.json
test/: integration.test.ts  package.test.ts  scaffold.test.ts  validation.test.ts
(+12 files in other folders)
