[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "Agentic AI workflow powered by OpenAI Agents SDK"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.0.9",
  "python-dotenv>=1.0",
  "rich>=13.0",
]

[project.optional-dependencies]
# Read any file (PDF, Word, Excel, CSV, images...)
file = [
  "markitdown[all]>=0.1",
  "openpyxl>=3.1",
]
# Generate Word, Excel, PDF documents
docs = [
  "python-docx>=1.1",
  "openpyxl>=3.1",
  "markdown>=3.5",
  "weasyprint>=62.0",
]
# Fetch web pages, DuckDuckGo search
web = [
  "httpx>=0.27",
  "markitdown>=0.1",
  "duckduckgo-search>=6.0",
]
# Pandas data analysis for CSV/Excel
data = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "tabulate>=0.9",
]
# Everything above
all = [
  "markitdown[all]>=0.1",
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "markdown>=3.5",
  "weasyprint>=62.0",
  "httpx>=0.27",
  "duckduckgo-search>=6.0",
  "pandas>=2.0",
  "tabulate>=0.9",
]

[project.optional-dependencies.dev]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
